--- a/Backend/PhysicsWars.Domain/PhysicsWars.Domain.csproj
+++ b/Backend/PhysicsWars.Domain/PhysicsWars.Domain.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
-        <ImplicitUsings>false</ImplicitUsings>
+        <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
