--- a/Backend/docker-compose.yml
+++ b/Backend/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     environment:
       - "SA_PASSWORD=Your_password123"
       - "ACCEPT_EULA=Y"
-      - "MSSQL_PID=Express"
+      - "MSSQL_PID=Enterprise"
     volumes:
       - "~/PhysicsWars/mssql/data:/var/opt/mssql/data"
     ports:
