--- a/Backend/PhysicsWars.Application/PhysicsWars.Application.csproj
+++ b/Backend/PhysicsWars.Application/PhysicsWars.Application.csproj
@@ -7,10 +7,41 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="FluentValidation" Version="10.3.5" />
+      <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="10.3.5" />
       <PackageReference Include="MediatR" Version="9.0.0" />
       <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Localization" Version="6.0.1" />
+      <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.15.0" />
+      <PackageReference Include="OneOf" Version="3.0.203" />
+      <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.15.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Features\Auth\Authorization" />
+      <Folder Include="Features\Auth\MultiFactorAuthentication" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\PhysicsWars.Domain\PhysicsWars.Domain.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <EmbeddedResource Update="Localization\Features\Auth\Authentication\Commands\AuthenticationCommand.resx">
+        <Generator>ResXFileCodeGenerator</Generator>
+        <LastGenOutput>AuthenticationCommand.Designer.cs</LastGenOutput>
+      </EmbeddedResource>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Update="Localization\Features\Auth\Authentication\Commands\AuthenticationCommand.Designer.cs">
+        <DesignTime>True</DesignTime>
+        <AutoGen>True</AutoGen>
+        <DependentUpon>AuthenticationCommand.resx</DependentUpon>
+      </Compile>
     </ItemGroup>
 
 </Project>
